[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/crafting_panel_controller.gd" id="1"]

[node name="CraftingPanel" type="Panel"]
custom_minimum_size = Vector2(380, 460)
position = Vector2(370, 90)
size = Vector2(380, 460)
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="VBox"]
text = "Crafting"

[node name="RecipesList" type="ItemList" parent="VBox"]
custom_minimum_size = Vector2(0, 120)

[node name="DetailLabel" type="RichTextLabel" parent="VBox"]
size_flags_vertical = 3
fit_content = false
scroll_active = true

[node name="Controls" type="HBoxContainer" parent="VBox"]

[node name="CraftButton" type="Button" parent="VBox/Controls"]
text = "Craft Selected"

[node name="ResultLabel" type="Label" parent="VBox/Controls"]
size_flags_horizontal = 3
text = ""
